<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <!-- Fundo do Titulo e Imagem principal -->
    <View
        android:id="@+id/blueBackground"
        style="@style/ViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título da aplicação -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:paddingBottom="30dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo para adicionar uma nova tarefa -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconImageView"
        style="@style/ImageTitulo"
        android:layout_marginStart="308dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/addtaskEditText"
        style="@style/AddTaskEditText"
        android:background="@drawable/aqua_borde"
        android:hint="@string/addEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

    <!-- Botão para adicionar uma tarefa -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        style="@style/AddButton"
        android:drawableStart="@drawable/add_icone"
        android:text="@string/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtaskEditText" />

    <!-- Título para a lista de tarefas -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/TaskText"
        android:layout_marginTop="10dp"
        android:text="@string/createdTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

    <!-- Linha divisória -->
    <View
        style="@style/Viewlinha"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Lista de tarefas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/fragment_list" />

</androidx.constraintlayout.widget.ConstraintLayout>
