<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Fundo do Título e Imagem principal -->
    <View
        android:id="@+id/blueBackground"
        style="@style/ViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título da aplicação -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="@+id/blueBackground"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Imagem ícone ao lado do título -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconImageView"
        style="@style/ImageTitulo"
        android:src="@drawable/baseline_list_alt_24"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/blueBackground"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Botão para adicionar uma tarefa -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        style="@style/AddButton"
        android:drawableStart="@drawable/add_icone"
        android:text="@string/addButton"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <!-- Título para a lista de tarefas -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/TaskText"
        android:layout_marginTop="10dp"
        android:text="@string/createdTasks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />

    <!-- Linha divisória -->
    <View
        android:id="@+id/line"
        style="@style/Viewlinha"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- RecyclerView para listar as tarefas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        style="@style/TaskRecyclerViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/fragment_task_list" />

    <!-- Texto exibido quando não há tarefas -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptyTextView"
        style="@style/EmptyTextViewStyle"
        android:text="@string/no_task"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
